<resources>
    <string name="app_name">G2 CASH APP</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="cash_app">...cash app</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="scan">Scan</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="php_200_00">Php 200.00</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="send">Send</string>
    <string name="withdraw">Withdraw</string>
</resources>